Fix issue ids alignment

--- a/app/assets/stylesheets/issues.css.scss
+++ b/app/assets/stylesheets/issues.css.scss
@@ -9,6 +9,10 @@
     li {
       .id {
         color: $grayLight;
+        float: left;
+        width: 4em;
+        text-align: right;
+        margin-right: 0.35em;
       }
     }
   }
